added log to file

--- a/PizzaOffer/appsettings.json
+++ b/PizzaOffer/appsettings.json
@@ -2,7 +2,8 @@
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
-    }
+    },
+    "PathFormat": "D:/Logs/log-{Date}.txt"
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
