--- a/PizzaOffer.DomainClasses/PizzaOffer.DomainClasses.csproj
+++ b/PizzaOffer.DomainClasses/PizzaOffer.DomainClasses.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaOffer.Common\PizzaOffer.Common.csproj" />
+  </ItemGroup>
+
 </Project>
