--- a/PizzaOffer/PizzaOffer.csproj
+++ b/PizzaOffer/PizzaOffer.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Serilog.Extensions.Logging.File" Version="2.0.0-dev-00024" />
+    <PackageReference Include="StackifyMiddleware" Version="3.0.2" />
   </ItemGroup>
 
   <ItemGroup>
