--- a/PizzaOffer/PizzaOffer.csproj
+++ b/PizzaOffer/PizzaOffer.csproj
@@ -17,4 +17,13 @@
     <ProjectReference Include="..\PizzaOffer.Services\PizzaOffer.Services.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Web\Data\" />
+    <Folder Include="Areas\Web\Models\" />
+    <Folder Include="Controllers\" />
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
+    <Folder Include="wwwroot\images\" />
+  </ItemGroup>
+
 </Project>
