--- a/PizzaOffer/appsettings.json
+++ b/PizzaOffer/appsettings.json
@@ -8,5 +8,22 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection2": "Server=(localdb)\\mssqllocaldb;Database=PizzaOffer;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "BearerTokens": {
+    "Key": "This is my shared key, not so secret, secret2!",
+    "Issuer": "http://localhost:5000/",
+    "Audience": "Any",
+    "AccessTokenExpirationMinutes": 2,
+    "RefreshTokenExpirationMinutes": 60,
+    "AllowMultipleLoginsFromTheSameUser": false,
+    "AllowSignoutAllUserActiveClients": true
+  },
+  "ApiSettings": {
+    "LoginPath": "account/login",
+    "LogoutPath": "account/logout",
+    "RefreshTokenPath": "account/RefreshToken",
+    "AccessTokenObjectKey": "access_token",
+    "RefreshTokenObjectKey": "refresh_token",
+    "AdminRoleName": "Admin"
   }
 }
