Added Microsoft.AspNetCore.App package

--- a/PizzaOffer.Services/PizzaOffer.Services.csproj
+++ b/PizzaOffer.Services/PizzaOffer.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.App" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\PizzaOffer.DataLayer\PizzaOffer.DataLayer.csproj" />
   </ItemGroup>
 
