--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,8 +1,15 @@
 # Build ASP.NET Core project using Azure Pipelines
 # https://docs.microsoft.com/azure/devops/pipelines/languages/dotnet-core?view=vsts
 
+strategy:
+  matrix:
+    linux:
+      imageName: 'ubuntu-16.04'
+    windows:
+      imageName: 'vs2017-win2016'
+
 pool:
-  vmImage: 'ubuntu-16.04' # other options: 'ubuntu-16.04', 'macOS-10.13', 'vs2017-win2016'
+  vmImage: $(imageName) # other options: 'ubuntu-16.04', 'macOS-10.13', 'vs2017-win2016'
 
 variables:
   BuildConfiguration: 'Release'
