--- a/fandogh-manifest.yml
+++ b/fandogh-manifest.yml
@@ -3,3 +3,7 @@ name: pizzaoffer
 spec:
   image: pizzaoffer:${IMAGE_VERSION}
   port: 80
+
+env:
+  - name: ASPNETCORE_ENVIRONMENT
+    value: Production
