Added Support for PostgreSQL

--- a/PizzaOffer/appsettings.json
+++ b/PizzaOffer/appsettings.json
@@ -6,8 +6,10 @@
     "PathFormat": "D:/Logs/log-{Date}.txt"
   },
   "AllowedHosts": "*",
+  "ActiveDatabase": "postgresql",
   "ConnectionStrings": {
-    "DefaultConnection2": "Server=(localdb)\\mssqllocaldb;Database=PizzaOffer;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "postgresql": "Host=localhost;Database=pizzaofferdb;Username=postgres;Password=mypassword",
+    "mssql": "Server=(localdb)\\mssqllocaldb;Database=PizzaOffer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "BearerTokens": {
     "Key": "This is my shared key, not so secret, secret2!",
