--- a/.dockerignore
+++ b/.dockerignore
@@ -1,19 +1,6 @@
 .git/*
 .vs/*
-.vscode
-
-# MSTest test Results
-[Tt]est[Rr]esult*/
-[Bb]uild[Ll]og.*
-
+TestResults/*
 # Build results
-[Dd]ebug/
-[Dd]ebugPublic/
-[Rr]elease/
-[Rr]eleases/
-x64/
-x86/
-bld/
-[Bb]in/
-[Oo]bj/
-[Ll]og/
+**/bin/*
+**/obj/*
