--- a/PizzaOffer.Common/PizzaOffer.Common.csproj
+++ b/PizzaOffer.Common/PizzaOffer.Common.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     <PackageReference Include="Pluralize.NET" Version="0.1.84" />
   </ItemGroup>
 
