Fixed HomeController and AdminController and their views

--- a/PizzaOffer/appsettings.json
+++ b/PizzaOffer/appsettings.json
@@ -11,6 +11,7 @@
     "postgresql": "Host=localhost;Database=pizzaofferdb;Username=postgres;Password=mypassword",
     "mssql": "Server=(localdb)\\mssqllocaldb;Database=PizzaOffer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
+  "LoginCookieExpirationDays": 30,
   "BearerTokens": {
     "Key": "This is my shared key, not so secret, secret2!",
     "Issuer": "http://localhost:5000/",
