--- a/PizzaOffer/bundleconfig.json
+++ b/PizzaOffer/bundleconfig.json
@@ -9,9 +9,29 @@
     ]
   },
   {
+    "outputFileName": "wwwroot/css/admin.site.min.css",
+    // An array of relative input file paths. Globbing patterns supported
+    "inputFiles": [
+      "wwwroot/css/admin.site.css"
+    ]
+  },
+  {
     "outputFileName": "wwwroot/js/site.min.js",
     "inputFiles": [
       "wwwroot/js/site.js"
+    ],
+    // Optionally specify minification options
+    "minify": {
+      "enabled": true,
+      "renameLocals": true
+    },
+    // Optinally generate .map file
+    "sourceMap": false
+  },
+  {
+    "outputFileName": "wwwroot/js/admin.site.min.js",
+    "inputFiles": [
+      "wwwroot/js/admin.site.js"
     ],
     // Optionally specify minification options
     "minify": {
