Fixed DbInitializerService. Admin user will set from appsettings.json

--- a/PizzaOffer/appsettings.Production.json
+++ b/PizzaOffer/appsettings.Production.json
@@ -1,6 +1,14 @@
-{
+﻿{
   "ActiveDatabase": "postgresql",
   "ConnectionStrings": {
     "postgresql": "Host=mypsqlservicename;Database=pizzaofferdb;Username=postgres;Password=mypassword"
+  },
+  "AdminUserSeed": {
+    "Username": "Alirezadl",
+    "Password": "123adminisAlirezadl456",
+    "DisplayName": "علیرضا",
+    "Email": "alirezadl.73@gmail.com",
+    "PhoneNumber": "09216252866",
+    "RoleName": "Admin"
   }
 }
