--- a/PizzaOffer/appsettings.json
+++ b/PizzaOffer/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
@@ -12,6 +12,16 @@
     "mssql": "Server=(localdb)\\mssqllocaldb;Database=PizzaOffer;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "LoginCookieExpirationDays": 30,
+
+  "AdminUserSeed": {
+    "Username": "Alireza",
+    "Password": "alirezaisadmin321654987",
+    "DisplayName": "علیرضا",
+    "Email": "test@gmail2.com",
+    "PhoneNumber": "09116662266",
+    "RoleName": "Admin"
+  },
+
   "BearerTokens": {
     "Key": "This is my shared key, not so secret, secret2!",
     "Issuer": "http://localhost:5000/",
